--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@
 
 main:
   - title: "CV"
-    url: /files/Acadêmico CV Pedro C P Pavan 2026.pdf
+    url: /files/Pedro_CV.pdf
 
   - title: "Portfolio"
     url: /portfolio/
